[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeback"
version = "0.1.0"
description = "Leakage-safe sports betting value analysis and bankroll backtesting"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scikit-learn>=1.3", "streamlit>=1.40"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
edgeback = "edgeback.cli:main"

[tool.setuptools.packages.find]
include = ["edgeback*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
